[package]
name = "process-stream"
version = "0.4.3"
edition = "2021"
description = "Thin wrapper around [`tokio::process`] to make it streamable"
authors = ["kkharji"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kkharji/process-stream"
repository = "https://github.com/kkharji/process-stream"
categories = ["asynchronous"]
keywords = ["tokio", "stream", "async-stream", "process"]

[dependencies]
tap = "1.0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
async-trait = "0.1"

[features]
default = []
serde = ["dep:serde"]
