[package]
name = "process-stream"
version = "0.5.0"
edition = "2024"
description = "Thin wrapper around [`tokio::process`] to make it streamable"
authors = ["kkharji", "Matthias Endler"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kkharji/process-stream"
repository = "https://github.com/kkharji/process-stream"
categories = ["asynchronous"]
keywords = ["tokio", "stream", "async-stream", "process"]

[dependencies]
tap = "1.0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
match_same_arms = { level = "allow", priority = 1 }

[lints.rust]
# Groups
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unused = "deny"

# Individual lints that deserve special attention
invalid-html-tags = "deny"
absolute-paths-not-starting-with-crate = "deny"
anonymous-parameters = "deny"
macro-use-extern-crate = "deny"
missing-copy-implementations = "deny"
missing-debug-implementations = "deny"
missing-docs = "deny"
semicolon-in-expressions-from-macros = "deny"
unreachable-pub = "deny"
variant-size-differences = "deny"
unsafe-code = "deny"
invalid-value = "deny"
missing-abi = "deny"
large-assignments = "deny"
explicit-outlives-requirements = "deny"
trivial-casts = "deny"
trivial-numeric-casts = "deny"
